--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/dp.jpeg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<span class="logo"><img src="images/me.png" alt="" /></span>
+						<h1>Shankaranarayan N</h1>
+						<p>M.Tech(Research), National Institute of Technology Karnataka, Surathkal<br />
+						Computer Vision | Natural Language Processing<br/>
+						<a href="https://www.linkedin.com/in/shankaranarayan-n/">-LinkedIn |<a href="https://github.com/NShankaranarayan">GitHub-</a>.</p>
 					</header>
 
 				<!-- Nav -->
