--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/me.png" alt="" /></span>
+						<span class="logo"><img src="images/me1.png" alt="" /></span>
 						<h1>Shankaranarayan N</h1>
 						<p>M.Tech(Research), National Institute of Technology Karnataka, Surathkal<br />
 						Computer Vision | Natural Language Processing<br/>
